tranier verification done

--- a/server/.env
+++ b/server/.env
@@ -7,3 +7,11 @@ PORT = 5000
 EMAIL_NODE_MAILER = fitbuddyonline@gmail.com
 
 EMAIL_PASSWORD = enfvdmdewkhzsezy
+
+CLOUD_NAME = duuwbsmdu
+
+CLOUDINARY_API_KEY = 992151367983841
+
+CLOUDINARY_API_SECRET = xwOxQXT4qS8OHMuhY53_T_jB9sw
+
+GOOGLE_CLIENT_ID = 373484577916-epulh746bcru647036j5n33e2fe26cch.apps.googleusercontent.com
