--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.1.0",
+    "@react-oauth/google": "^0.11.1",
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/react-modal": "^3.16.0",
     "axios": "^1.4.0",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.5.0",
     "formik": "^2.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "react-toastify": "^9.1.3",
@@ -27,6 +30,7 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/node": "^20.5.7",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/redux-thunk": "^2.1.0",
