--- a/server/.env
+++ b/server/.env
@@ -15,3 +15,13 @@ CLOUDINARY_API_KEY = 992151367983841
 CLOUDINARY_API_SECRET = xwOxQXT4qS8OHMuhY53_T_jB9sw
 
 GOOGLE_CLIENT_ID = 373484577916-epulh746bcru647036j5n33e2fe26cch.apps.googleusercontent.com
+
+AWS_ACCESS_KEY_ID = AKIA32AKTQVA77IFTL6F
+
+AWS_SECRET_KEY = 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
+
+AWS_REGION = ap-south-1
+
+AWS_BUCKET_NAME = fitbuddyonline
+
+CLOUDFRONT_DOMAIN = doevsex1innp9.cloudfront.net
