--- a/server/package.json
+++ b/server/package.json
@@ -11,12 +11,14 @@
   "author": "Shihab S",
   "license": "ISC",
   "devDependencies": {
+    "@types/aws-sdk": "^2.7.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
     "@types/multer": "^1.4.7",
+    "@types/multer-s3": "^3.0.0",
     "@types/node": "^20.4.5",
     "@types/nodemailer": "^6.4.9",
     "dotenv": "^16.3.1",
@@ -25,6 +27,7 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "aws-sdk": "^2.1457.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cloudinary": "^1.40.0",
@@ -36,6 +39,7 @@
     "mongoose": "^7.4.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "nodemailer": "^6.9.4"
   }
 }
