cloudfront bug fixed

--- a/server/.env
+++ b/server/.env
@@ -24,4 +24,6 @@ AWS_REGION = ap-south-1
 
 AWS_BUCKET_NAME = fitbuddyonline
 
-CLOUDFRONT_DOMAIN = doevsex1innp9.cloudfront.net
+CLOUDFRONT_DOMAIN = d14vk0gsksz3wz.cloudfront.net
+
+SAMPLE = 1234
