--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/aws-sdk": "^2.7.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/body-parser": "^1.19.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
@@ -21,6 +22,7 @@
     "@types/multer-s3": "^3.0.0",
     "@types/node": "^20.4.5",
     "@types/nodemailer": "^6.4.9",
+    "@types/uuid": "^9.0.4",
     "dotenv": "^16.3.1",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
@@ -40,6 +42,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
-    "nodemailer": "^6.9.4"
+    "nodemailer": "^6.9.4",
+    "stripe": "^13.8.0",
+    "uuid": "^9.0.1"
   }
 }
