--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@react-oauth/google": "^0.11.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react-modal": "^3.16.0",
+    "@types/video.js": "^7.3.53",
     "axios": "^1.4.0",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.5.0",
@@ -34,6 +35,7 @@
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "video.js": "^8.5.2",
     "yup": "^1.2.0"
   },
   "devDependencies": {
