--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@types/react-modal": "^3.16.0",
     "@types/video.js": "^7.3.53",
     "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.5.0",
     "formik": "^2.4.3",
@@ -36,6 +37,7 @@
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "simplebar-react": "^3.2.4",
     "video.js": "^8.5.2",
     "yup": "^1.2.0"
   },
