Chat between user and trainer done

--- a/client/package.json
+++ b/client/package.json
@@ -23,11 +23,14 @@
     "@types/react-modal": "^3.16.0",
     "@types/video.js": "^7.3.53",
     "axios": "^1.4.0",
+    "chart.js": "^4.4.0",
     "date-fns": "^2.30.0",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.5.0",
     "formik": "^2.4.3",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-paginate": "^8.2.0",
@@ -38,6 +41,7 @@
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "simplebar-react": "^3.2.4",
+    "socket.io-client": "^4.7.2",
     "video.js": "^8.5.2",
     "yup": "^1.2.0"
   },
