--- a/server/package.json
+++ b/server/package.json
@@ -43,6 +43,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "nodemailer": "^6.9.4",
+    "socket.io": "^4.7.2",
     "stripe": "^13.8.0",
     "uuid": "^9.0.1"
   }
